# text-editor

./: Cargo.toml  LICENSE  justfile
core/: Cargo.toml
core/src/: action.rs  cursor.rs  lib.rs  view.rs
plugin/: Cargo.toml
tui/: Cargo.toml
tui/src/: main.rs
