[workspace]
resolver = "2"
members = [
  "core"
, "plugin", "tui"]

[workspace.package]
authors = ["PixelDoted"]

[workspace.dependencies]
# Core
ropey = "1.6"
core = { package = "text_editor_core", path = "./core" }

# Plugin
wasmtime = "0.10"
plugin = { package = "text_editor_plugin", path = "./plugin" }

# Tui
ratatui = "0.28"
